@@ -20,9 +20,9 @@
 package org.apache.hama;
 
 public class TestVector extends HamaTestCase {
-  final double cosine = 0.6978227007909176;
-  final double norm1 = 12.0;
-  final double norm2 = 6.782329983125268;
+  private final double cosine = 0.6978227007909176;
+  private final double norm1 = 12.0;
+  private final double norm2 = 6.782329983125268;
   private double[][] values = { { 2, 5, 1, 4 }, { 4, 1, 3, 3 } };
 
   /**
@@ -46,16 +46,16 @@ public class TestVector extends HamaTestCase {
     scalingTest(v2);
   }
 
-  public void dotTest(Vector v1, Vector v2) {
+  private void dotTest(Vector v1, Vector v2) {
     double cos = v1.dot(v2);
     assertEquals(cos, cosine);
   }
 
-  public void norm1Test(Vector v1, Vector v2) {
+  private void norm1Test(Vector v1, Vector v2) {
     assertEquals(norm1, v1.getNorm1());
   }
 
-  public void norm2Test(Vector v1, Vector v2) {
+  private void norm2Test(Vector v1, Vector v2) {
     assertEquals(norm2, v1.getNorm2());
   }
 
@@ -65,5 +65,11 @@ public class TestVector extends HamaTestCase {
     for (int i = 0; i < v2.size(); i++) {
       assertEquals(values[1][i] * 0.5, v2.get(i));
     }
+  }
+  
+  public void testGetSet() {
+    Vector v1 = new Vector();
+    v1.set(0, 0.2);
+    assertEquals(v1.get(0), 0.2);
   }
 }
